# MathRoboRust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: speed.rs
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/tests/: test_multiplication.py  test_python_repro.py
src/: cmtm.rs  lib.rs  lie.rs  se3.rs  so3.rs  util.rs
tests/: repro.rs
