[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "mathrobo"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[tool.maturin]
bindings = "pyo3"
module-name = "mathrobo"
cargo-manifest-path = "Cargo.toml"

[dependency-groups]
dev = ["maturin>=1.5", "pytest>=8"]
