[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "mathrobors"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
]

[tool.maturin]
bindings = "pyo3"
module-name = "mathrobors"
cargo-manifest-path = "Cargo.toml"

[tool.uv.sources]
mathrobo = { git = "https://github.com/MathRobotics/MathRobo", rev = "develop" }

[dependency-groups]
dev = ["maturin>=1.5", "pytest>=8", "mathrobo",]

[tool.pytest.ini_options]
addopts = "-m 'not dev'"
markers = ["dev: development-only checks (not run by default)"]
